--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 RAZOR_KEY_ID=rzp_test_eSJNxTqrJwrb8I
 RAZOR_KEY_SECRET=nk5iWiHf3bebEidskb999njB
-DB_HOST=db4free.net
-DB_NAME=cambridgepublictrust
-DB_USER=your_db_username
-DB_PASS=your_db_password
+DB_HOST=localhost
+DB_NAME=charifit_db
+DB_USER=root
+DB_PASS=
 
